	- 64 bit perl support submitted by Derrik Pates

0.11
	- make static callbacks thread-safe, contributed by Daniel Frett
	- readdir implmenentation contributed by Alex Sudakov RT #55953

0.12
	- all changes in this version are contributed by Darrik Pates
	- BACKWARD COMPATILIBY CHANGE: readdir introduced in 0.11 changed!
	- mount option -o big_writes, and added:
	  opendir, releasedir, fsyncdir, init, destroy, access, create,
	  ftruncate, fgetattr, lock, utimens, bmap

0.13
	- improved support for FreeBSD, NetBSD and OS X
	- restored non-threaded perl support

0.14
	- Retooling portions of the test facilities, and removing dependence
	  on syscall() and knowing syscall numbers for basic test
	  functionality.
	- Compatibility fixes for Perl 5.8 and Perl 5.13/5.14 with threads.
	- Cleanups to build system, to use pkg-config to get the Fuse
	  build arguments for building our code against the installed
	  libfuse. Cleans up some of the mess before of different ways of
	  handling different OSes; NetBSD is still a bit messy due to
	  librefuse.
	- Decrease file sizes in getattr test, to keep test from running
	  for multiple hours (due to HFS+ not supporting sparse files).

0.15
	- Eliminate more uses of system() in tests.
	- Enable the ioctl() operation when built against FUSE 2.8 or later.
	  Also wrote tests based off fioc.c and fioclient.c from FUSE.
	- Use smaller getattr test sizes only on MacOS X.
	- Permanently fix the XATTR_{CREATE,REPLACE} symbols.
	- Add a wrapper for the poll() operation when built against FUSE 2.8
	  or later. Also wrote tests based off fsel.c and fselclient.c
	  from FUSE.
	- Fixed a thinko in the platform handling chain in Makefile.PL.
	- Added handling for sub-second [amc]time stamps.
	- Improve compatibility with Fuse4X.
	- Improve future compatibility with non-Linux FUSE 2.8
	  implementations.

0.16
	- Fixed unbounded stack growth due to previous changes in getdir()
	  and readdir() wrappers that didn't properly decrement SP.